# thesis-analysis

./: .gitignore  CLAUDE.md  README.md  overview.ipynb  preprocessing.ipynb  prompts.rmd  pyproject.toml  tmpclaude-2dfb-cwd
.claude/: settings.local.json
analysis/: age.ipynb  main_analysis.ipynb  main_effects.ipynb  manip_check.ipynb  moderation.ipynb  moderation_old.ipynb  moderation_v2.ipynb  moderation_v3.ipynb  multivariate.ipynb  multivariate_analysis.ipynb  multivariate_analysis_CLAUDE.ipynb  non_inf_ttest.ipynb  overview_results.ipynb  univariate.ipynb
claude_notes/: BIN_LABELS_AND_POSITIONING.md  HISTOGRAM_EDGE_FIX.md  MIRRORED_HISTOGRAM_IMPLEMENTATION.md  POSITIONING_FIX_SUMMARY.md  SPLIT_HISTOGRAM_BOXPLOT_IMPLEMENTATION.md  SPLIT_HISTOGRAM_FIXES.md  future_mediation_analysis.md  manova_type1_error_explanation.md  multivariate_analysis_plan.md  noninferiority_examples.ipynb  noninferiority_viz_README.md  syntax_check.py  test_forest_plot.py  test_mirror_hist.py  test_noninferiority_viz.py  test_noninferiority_viz_fixed.py  test_regression_table.py  test_split_histogram.py  test_updated_table.py
data/: data_clean.csv  data_scales.csv  labels.csv  questions.csv  raw_data_qualtrics.csv
output/: direct_effects.csv  effects_matrix.csv  manova_results.csv  moderation_effects.csv  moderation_results_exploratory.csv  moderation_results_theoretical.csv  multivariate_eq_test_res  multivariate_eq_test_res.json  regression_coefficients_overview.csv  regression_model_stats.csv  table1_manova_multivariate.csv  table2_univariate_group_effects.csv  (+10 more)
scripts/: scales.py  (+3 more)
(+21 files in other folders)
