[project]
name = "thesis-analysis"
version = "0.1.0"
description = "Python project to analyze results of Master Thesis research project."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.2.250926",
    "scipy>=1.16.2",
    "scipy-stubs==1.16.2.4",
    "statsmodels>=0.14.5",
]
